@@ -1,33 +1,32 @@
 
  Groups Blog Protect
- 
- Copyright 2013 "kento" (Karim Rahimpur) www.itthinx.com
- 
+
+ Copyright 2013-2020 "kento" (Karim Rahimpur) www.itthinx.com
+
  The files COPYRIGHT.txt and LICENSE.txt as well as ALL NOTICES IN THE
  HEADERS OF ALL FILES MUST BE KEPT INTACT.
 
  GPL-licensed
- 
+
  Unless otherwise stated, all code in this plugin is licensed under
  the GPL License:
- 
+
  All code is part of this plugin,  hereinafter referred to as "program".
- 
+
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
- 
+
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
- 
+
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
- 
- 
+
+
  Visit http://www.itthinx.com/ for help, general info and fun.
- 
+
  Plugin page: http://www.itthinx.com/plugins/groups-blog-protect/
- 
