@@ -1,4 +1,0 @@
-groups-blog-protect
-===================
-
-Groups Blog Protect
